tests/NormalTests/paczka1/small_fuzzy/66626484.err
Error in line 6: 8PEu A119 57,9
Error in line 8: 8PEu A768 68,0
